src/FinancialForce Accounting/objects/ChartOfAccountsMappingHistory__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChartOfAccountsMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chart of Accounts Mapping</label>
        <referenceTo>ChartOfAccountsMapping__c</referenceTo>
        <relationshipLabel>Chart of Accounts Mapping Histories</relationshipLabel>
        <relationshipName>ChartOfAccountsMappingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension Type</fullName>
                </value>
                <value>
                    <fullName>Dimension Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Chart of Accounts Mapping History</label>
    <nameField>
        <displayFormat>AGMH-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chart of Accounts Mapping Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>